dark mode cross color corrected

--- a/src/styles/dark-theme.less
+++ b/src/styles/dark-theme.less
@@ -741,7 +741,14 @@ body.dark-theme {
 }
 
     & .ant-select-clear {
+    background: @dark-theme-secondary-color !important;
+    .anticon{
+      color: @dark-theme-text-color !important;
+    }
+  }
+  & .ant-picker-clear{
     background: @dark-theme-secondary-color;
+    color: @dark-theme-text-color  ;
   }
 
 
